[bug] due to commit 2155eb6, data import/export dialog and user profile dialog have become broken; [note] this is a temporary fix, not a full fix for the bug; [bug] due to this fix, some part of fragment editor would be hidden behind the header;

--- a/src/main/webapp/styles/custom/layout.css
+++ b/src/main/webapp/styles/custom/layout.css
@@ -9,7 +9,7 @@
 }
 
 #header {
-	z-index: 200;
+	z-index: 2000;
 	position: fixed;
 	top: 0;
 	height: 40px;
